[package]
name = "aa"
descripttion = "Alcoholic Astronomers"
version = "0.1.0"
authors = ["Jay Oster <jay@kodewerx.org>"]
edition = "2018"
repository = "https://github.com/parasyte/aa"
readme = "README.md"
license = "MIT"
include = [
    "/Cargo.*",
    "/LICENSE",
    "/README.md",
    "/img/logo.jpg",
    "/src/**/*",
]

[features]
default = []
random = ["getrandom", "randomize"]

[dependencies]
byteorder = "1.3"
gumdrop = "0.8"

# Encoding
getrandom = { version = "0.1", optional = true }
randomize = { version = "3.0", optional = true }
